--- a/index.css
+++ b/index.css
@@ -1,21 +1,1 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@100;200;300;400;500;600;700;800;900&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800&display=swap');
-
-body {
-    overflow-x: hidden;
-
-    font-family: 'Poppins';
-    background: black;
-    color: #fff;
-
-    position: absolute;
-    left: 0;
-    top: 0;
-
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-}
-
-/* background: linear-gradient(7.13deg, #1D1D1F 30.02%, #404058 99.46%); */
+@import"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800&display=swap";body{overflow-x:hidden;font-family:"Poppins";background:black;color:#fff;position:absolute;left:0;top:0;margin:0;padding:0;height:100%;width:100%}
