--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -1,4 +1,4 @@
-@keyframes fadein {
+@keyframes fadein-title {
     from {
         opacity: 0;
         transform: translateY(-70px);
@@ -6,5 +6,16 @@
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes fadein-card {
+    from {
+        opacity: 0;
+        margin-left: 160px;
+    }
+    to {
+        opacity: 1;
+        margin-left: 0;
     }
 }
