:recycle: ページの差し替えとcssの修正

--- a/src/pages/member/style.css
+++ b/src/pages/member/style.css
@@ -1,4 +1,4 @@
-@keyframes fadein-dummy {
+@keyframes fadein-member {
     from {
         opacity: 0;
     }
@@ -8,7 +8,7 @@
     }
 }
 
-@keyframes fadeout-dummy {
+@keyframes fadeout-member {
     from {
         opacity: 1;
     }
