--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -34,6 +34,30 @@
     }
 }
 
+@keyframes fadein-description-line1 {
+    from {
+        opacity: 0;
+        transform: translateX(70px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+        pointer-events: all;
+    }
+}
+
+@keyframes fadein-description-line2 {
+    from {
+        opacity: 0;
+        transform: translateX(-70px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+        pointer-events: all;
+    }
+}
+
 /* reverse */
 
 @keyframes fadeout-title {
